# C-Deep-Learning-Library

./: CMakeLists.txt  README.md
data/: Layer0kernel0_0  Layer0kernel1_0  Layer0kernel2_0  Layer2bias  Layer2function  Layer2weight  Layer3bias  Layer3weight  config
datatesting/: config
notebook/: Untitled.ipynb
src/: CMakeLists.txt  Layer.cpp  Layer.h  main.cpp  mnist.h  net.cpp  net.h  notebook.cpp  signlang.h
tests/: FeedForward.cpp  tests.cpp
txtimages/: image.txt  image0.txt  image1.txt  image10.txt  image100.txt  image101.txt  image102.txt  image103.txt  image104.txt  image105.txt  image106.txt  image107.txt  image108.txt  image109.txt  image11.txt  image110.txt  image111.txt  image112.txt  image113.txt  image114.txt  image115.txt  image116.txt  image117.txt  image118.txt  image119.txt  image12.txt  image120.txt  image121.txt  image122.txt  image123.txt  image124.txt  image125.txt  image126.txt  image127.txt  image128.txt  image129.txt  image13.txt  image130.txt  image131.txt  image132.txt  (+561 more)
